# CCU_1

./: CMakeLists.txt  ble_protocol_v2_1_rev2.md  ble_protocol_v2_1_rev3.md  ble_protocol_v2_1_rev4.md  ble_protocol_v2_1_rev5.md  ble_protocol_v2_1_rev6.md  partitions.csv  sdkconfig
components/button/: CMakeLists.txt  button.c  key.c
components/crypto/: CMakeLists.txt  crypto_aes.c
components/espressif__esp-modbus/: .component_hash  CHECKSUMS.json  idf_component.yml  idf_version_info.txt
components/heater_uart/: CMakeLists.txt  ccu_modbus_api.c  dishwasher_modbus_api.c  heater_interface_api.c  heater_noritz_api.c  heater_remote.c  heater_rinnai_api.c  heater_rinnai_bussiness_api.c  heater_uart_interface.c  heater_uart_service.c
components/heater_uart/include/: ccu_modbus_api.h  ccu_modbus_config.h  dishwasher_modbus_api.h  heater_interface_api.h  heater_noritz_api.h  heater_remote.h  heater_rinnai_api.h  heater_rinnai_bussiness_api.h  heater_uart.h
components/led/: CMakeLists.txt  led.c
components/lora/: CMakeLists.txt  radio.c  radio_encoder.c  (+3 more)
components/network/: CMakeLists.txt  ble_cmd_handler.c  ble_uart.c  iot_event.c  mcu_api.c  mqtt_service.c  network_service.c  system.c  tcp_client.c  tcp_service.c  wifi_api.c  wifi_manager.c  wifi_service.c
components/network/include/: ble_cmd_handler.h  ble_uart.h  iot_event.h  mcu_api.h  mqtt_service.h  network_service.h  network_typedef.h  protocol.h  system.h  tcp_client.h  tcp_service.h  wifi_api.h  wifi_manager.h  wifi_service.h
main/: CMakeLists.txt  idf_component.yml  main.c  ota.c  ota.h
(+24 files in other folders)
